tests/snapshots/e2e__feature_tests__use_nvmrc_lts__Bash.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
set -e
shopt -s expand_aliases

eval "$(fnm env)"
echo lts/dubnium > .nvmrc
fnm install
fnm use
fnm ls | grep lts-dubnium
