tests/snapshots/e2e__feature_tests__use_nvmrc_lts__Fish.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
fnm env | source
echo lts/dubnium > .nvmrc
fnm install
fnm use
fnm ls | grep lts-dubnium
