tests/snapshots/e2e__feature_tests__use_nvmrc_lts__Zsh.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env)"
echo lts/dubnium > .nvmrc
fnm install
fnm use
fnm ls | grep lts-dubnium
